--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -4943,3 +4943,15 @@ Version:1.0
 /*=============================
 	End Footer CSS
 ===============================*/
+
+/*Single Product Image*/
+
+.single-product img{
+	width: 500px;
+	height: 300px;
+}
+
+.single-list img{
+	width: 115px;
+	height: 140px;
+}
